prevent the text inside inline code from wrapping

--- a/templates/assets/styles/style.scss
+++ b/templates/assets/styles/style.scss
@@ -582,6 +582,7 @@ article {
     code {
       font-family: "JetBrains Mono", monospace;
       font-size: 0.875em;
+      white-space: nowrap;
 
       &.symbol-ref {
         color: var(--theme-color);
